unpackaged/main/default/objects/QS_Related_Track__c/QS_Related_Track__c.object-meta.xml
<CustomObject>
    <label>Related Track</label>
    <nameField>
        <displayFormat>RT-{0000}</displayFormat>
        <label>Related Track Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related Tracks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>