unpackaged/main/default/objects/QS_Related_Track__c/fields/QS_Related_Track__c.field-meta.xml
<CustomField>
    <fullName>QS_Related_Track__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Track</label>
    <referenceTo>QS_Track__c</referenceTo>
    <relationshipLabel>Related Tracks</relationshipLabel>
    <relationshipName>Related_Tracks</relationshipName>
    <type>Lookup</type>
</CustomField>