unpackaged/main/default/objects/QS_Related_Track__c/fields/QS_Requirement__c.field-meta.xml
<CustomField>
    <fullName>QS_Requirement__c</fullName>
    <label>Requirement</label>
    <referenceTo>QS_Requirements__c</referenceTo>
    <relationshipLabel>Related Tracks</relationshipLabel>
    <relationshipName>Related_Tracks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>