unpackaged/main/default/objects/QS_Related_Track__c/fields/Requirement_Title__c.field-meta.xml
<CustomField>
    <fullName>Requirement_Title__c</fullName>
    <formula>QS_Requirement__r.QS_Title__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Requirement Title</label>
    <type>Text</type>
</CustomField>